--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "bin": "./bin/run.js",
   "scripts": {
     "build": "tsc -w",
-    "patch-release": "npm version patch && npm publish && git push --follow-tags",
-    "minor-release": "npm version minor && npm publish && git push --follow-tags"
+    "patch-release": "tsc && npm version patch && npm publish && git push --follow-tags",
+    "minor-release": "tsc && npm version minor && npm publish && git push --follow-tags"
   },
   "repository": {
     "type": "git",
@@ -31,14 +31,14 @@
   },
   "homepage": "https://github.com/DRIVER-EU/kafka-topics-logger#readme",
   "dependencies": {
-    "avsc": "^5.2.3",
+    "avsc": "^5.3.0",
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
     "kafka-node": "^2.6.1",
-    "node-test-bed-adapter": "^0.4.0"
+    "node-test-bed-adapter": "^0.4.2"
   },
   "devDependencies": {
-    "@types/command-line-args": "^4.0.2",
-    "@types/node": "^9.4.7"
+    "@types/command-line-args": "^5.0.0",
+    "@types/node": "^10.3.2"
   }
 }
