--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "kafka-topics-logger",
   "version": "0.0.5",
   "description": "Log messages in a Kafka topic to a JSON file.",
-  "main": "./dist/index.js",
-  "typings": "./dist/index.d.ts",
+  "main": "./dist/cli.js",
+  "typings": "./dist/cli.d.ts",
   "bin": "./bin/run.js",
   "scripts": {
     "build": "tsc -w",
+    "cap": "node dist/cli.js standard_cap",
     "patch-release": "tsc && npm version patch && npm publish && git push --follow-tags",
     "minor-release": "tsc && npm version minor && npm publish && git push --follow-tags"
   },
@@ -31,15 +32,15 @@
   },
   "homepage": "https://github.com/DRIVER-EU/kafka-topics-logger#readme",
   "dependencies": {
-    "avsc": "^5.3.0",
+    "avsc": "^5.4.3",
     "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
-    "kafka-node": "^2.6.1",
-    "node-test-bed-adapter": "^0.4.2"
+    "kafka-node": "^3.0.1",
+    "node-test-bed-adapter": "^0.5.0"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
-    "@types/node": "^10.3.2",
-    "typescript": "^3.0.1"
+    "@types/node": "^10.9.4",
+    "typescript": "^3.0.3"
   }
 }
